# gstreamer-dbus-monitor

./: CMakeLists.txt  README.md
include/: dbus_monitor.h  logger.h
include/gstreamer-dbus-monitor/: gst_pipeline_monitor.h
src/: main.cpp
src/cli/: cli_interface.cpp  cli_interface.h
src/dbus/: dbus_monitor.cpp  dbus_monitor.h
src/gstreamer/: gst_pipeline_monitor.cpp  gst_pipeline_monitor.h
src/utils/: logger.cpp  logger.h
